syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.proto";
option java_outer_classname = "TraceabilityProto";

package aurigraph.v11;

import "google/protobuf/timestamp.proto";

// TraceabilityService - Supply chain and asset traceability
service TraceabilityService {
    // Register a new asset
    rpc RegisterAsset(AssetRegistrationRequest) returns (AssetRegistrationResponse);

    // Record asset transfer/movement
    rpc RecordTransfer(AssetTransferRequest) returns (AssetTransferResponse);

    // Get complete asset provenance
    rpc GetProvenance(ProvenanceRequest) returns (ProvenanceResponse);

    // Stream asset events in real-time
    rpc StreamAssetEvents(AssetEventStreamRequest) returns (stream AssetEvent);

    // Verify asset authenticity
    rpc VerifyAuthenticity(AuthenticityRequest) returns (AuthenticityResponse);

    // Get supply chain analytics
    rpc GetSupplyChainAnalytics(SupplyChainAnalyticsRequest) returns (SupplyChainAnalytics);
}

// Asset registration request
message AssetRegistrationRequest {
    string asset_id = 1;
    string asset_type = 2;  // PRODUCT, DOCUMENT, CERTIFICATE, COMMODITY
    string name = 3;
    string description = 4;
    string origin = 5;
    string owner_address = 6;
    map<string, string> attributes = 7;
    repeated string certifications = 8;
    bytes digital_twin_hash = 9;
    google.protobuf.Timestamp manufacture_date = 10;
}

// Asset registration response
message AssetRegistrationResponse {
    string asset_id = 1;
    string blockchain_id = 2;  // On-chain ID
    string transaction_hash = 3;
    bool success = 4;
    string error_message = 5;
    google.protobuf.Timestamp registered_at = 6;
    string merkle_proof = 7;
}

// Asset transfer request
message AssetTransferRequest {
    string asset_id = 1;
    string from_address = 2;
    string to_address = 3;
    string location = 4;
    string transfer_type = 5;  // OWNERSHIP, CUSTODY, PROCESSING
    map<string, string> transfer_data = 6;
    repeated string documents = 7;
    google.protobuf.Timestamp transfer_timestamp = 8;
}

// Asset transfer response
message AssetTransferResponse {
    string transfer_id = 1;
    string transaction_hash = 2;
    bool success = 3;
    string error_message = 4;
    int32 provenance_depth = 5;  // Number of transfers
    google.protobuf.Timestamp recorded_at = 6;
}

// Provenance request
message ProvenanceRequest {
    string asset_id = 1;
    int64 from_block = 2;
    int64 to_block = 3;
    bool include_documents = 4;
    bool include_certifications = 5;
    int32 max_depth = 6;
}

// Provenance response
message ProvenanceResponse {
    string asset_id = 1;
    AssetInfo current_state = 2;
    repeated ProvenanceEvent events = 3;
    repeated string chain_of_custody = 4;
    int32 total_transfers = 5;
    google.protobuf.Timestamp first_recorded = 6;
    google.protobuf.Timestamp last_updated = 7;
    string merkle_root = 8;
}

// Asset info
message AssetInfo {
    string asset_id = 1;
    string asset_type = 2;
    string name = 3;
    string current_owner = 4;
    string current_location = 5;
    string status = 6;
    map<string, string> attributes = 7;
    repeated string active_certifications = 8;
}

// Provenance event
message ProvenanceEvent {
    string event_id = 1;
    string event_type = 2;
    string actor = 3;
    string from_location = 4;
    string to_location = 5;
    string transaction_hash = 6;
    int64 block_height = 7;
    map<string, string> event_data = 8;
    google.protobuf.Timestamp timestamp = 9;
}

// Asset event stream request
message AssetEventStreamRequest {
    repeated string asset_ids = 1;
    repeated string event_types = 2;
    string owner_filter = 3;
    bool follow_head = 4;
}

// Asset event
message AssetEvent {
    string asset_id = 1;
    string event_type = 2;
    string event_id = 3;
    string actor = 4;
    map<string, string> event_data = 5;
    string transaction_hash = 6;
    int64 block_height = 7;
    google.protobuf.Timestamp timestamp = 8;
}

// Authenticity request
message AuthenticityRequest {
    string asset_id = 1;
    bytes provided_hash = 2;
    repeated string certifications_to_verify = 3;
    bool deep_verification = 4;
}

// Authenticity response
message AuthenticityResponse {
    bool is_authentic = 1;
    double confidence_score = 2;
    repeated VerificationResult verification_results = 3;
    string merkle_proof = 4;
    google.protobuf.Timestamp verified_at = 5;
    string verifier_signature = 6;
}

// Verification result
message VerificationResult {
    string check_type = 1;
    bool passed = 2;
    string details = 3;
    double score = 4;
}

// Supply chain analytics request
message SupplyChainAnalyticsRequest {
    string supply_chain_id = 1;
    repeated string asset_types = 2;
    google.protobuf.Timestamp from_date = 3;
    google.protobuf.Timestamp to_date = 4;
    repeated string metrics = 5;
}

// Supply chain analytics
message SupplyChainAnalytics {
    string supply_chain_id = 1;
    int64 total_assets = 2;
    int64 total_transfers = 3;
    double average_transfer_time_hours = 4;
    map<string, int64> assets_by_type = 5;
    map<string, int64> assets_by_location = 6;
    double authenticity_rate = 7;
    repeated BottleneckInfo bottlenecks = 8;
    google.protobuf.Timestamp analysis_timestamp = 9;
}

// Bottleneck info
message BottleneckInfo {
    string location = 1;
    double average_delay_hours = 2;
    int32 affected_assets = 3;
    string recommendation = 4;
}
