package io.aurigraph.v11.contracts.grpc;

import io.aurigraph.v11.contracts.SmartContractService;
import io.aurigraph.v11.contracts.rwa.*;
import io.quarkus.grpc.GrpcService;
import io.smallrye.mutiny.Uni;
import jakarta.inject.Inject;
import java.math.BigDecimal;
import java.util.*;
import java.util.stream.Collectors;
import io.quarkus.logging.Log;

/**
 * gRPC Service implementation for Smart Contracts and RWA Tokenization
 * Provides high-performance blockchain operations via Protocol Buffers
 */
@GrpcService
public class SmartContractGrpcService {
    // Note: This is a placeholder for when Protocol Buffer classes are generated
    // The actual implementation will use generated proto classes
    
    @Inject
    SmartContractService smartContractService;
    
    @Inject
    RWATokenizer rwaTokenizer;
    
    @Inject
    AssetValuationService valuationService;
    
    @Inject
    DigitalTwinService digitalTwinService;
    
    @Inject
    OracleService oracleService;

    /**
     * Create a new Ricardian contract
     * Maps gRPC CreateContractRequest to internal service call
     */
    public Uni<Object> createContract(Object request) {
        return Uni.createFrom().item(() -> {
            Log.info("Creating new Ricardian contract via gRPC");
            
            // Extract parameters from protobuf request
            // This will be implemented once proto classes are generated
            String templateId = "DEFAULT_TEMPLATE";
            String legalText = "Sample legal text";
            String executableCode = "function() { return 'executed'; }";
            Map<String, String> parameters = new HashMap<>();
            String creatorAddress = "0x123";
            String assetType = "CARBON_CREDIT";
            
            // Create contract using service
            var contract = smartContractService.createRicardianContract(
                templateId, legalText, executableCode, parameters, creatorAddress, assetType
            );
            
            // Convert to protobuf response
            return createContractResponse(true, "Contract created successfully", contract);
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r));
    }

    /**
     * Execute a Ricardian contract
     */
    public Uni<Object> executeContract(Object request) {
        return Uni.createFrom().item(() -> {
            Log.info("Executing Ricardian contract via gRPC");
            
            // Extract from protobuf request
            String contractId = "contract-123";
            // ContractTrigger trigger = extractTrigger(request);
            // ExecutionContext context = extractExecutionContext(request);
            
            // Execute using service
            // var result = smartContractService.executeContract(contractId, trigger, context);
            
            // Convert to protobuf response
            return createExecutionResponse(true, "Contract executed successfully");
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r));
    }

    /**
     * Tokenize a real-world asset
     */
    public Uni<Object> tokenizeAsset(Object request) {
        return rwaTokenizer.tokenizeAsset(createTokenizationRequest())
            .map(result -> {
                Log.infof("Asset tokenized successfully: %s", result.getToken().getTokenId());
                return createTokenizationResponse(result);
            });
    }

    /**
     * Transfer RWA tokens
     */
    public Uni<Object> transferToken(Object request) {
        return Uni.createFrom().item(() -> {
            // Extract from protobuf
            String tokenId = "wAUR-123";
            String fromAddress = "0x123";
            String toAddress = "0x456";
            BigDecimal amount = new BigDecimal("100");
            
            return rwaTokenizer.transferToken(tokenId, fromAddress, toAddress, amount)
                .map(success -> createTransferResponse(success, "Transfer completed"));
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r))
          .flatMap(uni -> uni);
    }

    /**
     * Get RWA token information
     */
    public Uni<Object> getToken(Object request) {
        return Uni.createFrom().item(() -> {
            String tokenId = "wAUR-123";
            
            return rwaTokenizer.getToken(tokenId)
                .map(token -> createTokenResponse(token));
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r))
          .flatMap(uni -> uni);
    }

    /**
     * Burn RWA tokens
     */
    public Uni<Object> burnToken(Object request) {
        return Uni.createFrom().item(() -> {
            String tokenId = "wAUR-123";
            String ownerAddress = "0x123";
            
            return rwaTokenizer.burnToken(tokenId, ownerAddress)
                .map(success -> createBurnResponse(success));
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r))
          .flatMap(uni -> uni);
    }

    /**
     * Create digital twin for an asset
     */
    public Uni<Object> createDigitalTwin(Object request) {
        return Uni.createFrom().item(() -> {
            String assetId = "asset-123";
            String assetType = "CARBON_CREDIT";
            Map<String, Object> metadata = new HashMap<>();
            
            var digitalTwin = digitalTwinService.createDigitalTwin(assetId, assetType, metadata);
            
            return createDigitalTwinResponse(digitalTwin);
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r));
    }

    /**
     * Update digital twin data
     */
    public Uni<Object> updateDigitalTwin(Object request) {
        return Uni.createFrom().item(() -> {
            String twinId = "DT-123";
            Map<String, Object> updates = new HashMap<>();
            
            return digitalTwinService.updateTwin(twinId, updates)
                .map(success -> createUpdateResponse(success));
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r))
          .flatMap(uni -> uni);
    }

    /**
     * Get digital twin information
     */
    public Uni<Object> getDigitalTwin(Object request) {
        return Uni.createFrom().item(() -> {
            String twinId = "DT-123";
            
            return digitalTwinService.getDigitalTwin(twinId)
                .map(twin -> createGetDigitalTwinResponse(twin));
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r))
          .flatMap(uni -> uni);
    }

    /**
     * Get asset valuation
     */
    public Uni<Object> getAssetValuation(Object request) {
        return Uni.createFrom().item(() -> {
            String assetType = "CARBON_CREDIT";
            String assetId = "asset-123";
            Map<String, Object> metadata = new HashMap<>();
            
            BigDecimal valuation = valuationService.getAssetValuation(assetType, assetId, metadata);
            
            return createValuationResponse(valuation);
        }).runSubscriptionOn(r -> Thread.startVirtualThread(r));
    }

    /**
     * Get market data for assets
     */
    public Uni<Object> getMarketData(Object request) {
        return oracleService.getMarketData("asset-123", "CARBON_CREDIT")
            .map(marketData -> createMarketDataResponse(marketData));
    }

    /**
     * Get smart contract statistics
     */
    public Uni<Object> getContractStats(Object request) {
        return smartContractService.getStats()
            .map(stats -> createContractStatsResponse(stats));
    }

    /**
     * Get tokenizer statistics
     */
    public Uni<Object> getTokenizerStats(Object request) {
        return rwaTokenizer.getStats()
            .map(stats -> createTokenizerStatsResponse(stats));
    }

    // Helper methods to create protobuf responses
    // These will be replaced with actual protobuf message creation once generated
    
    private Object createContractResponse(boolean success, String message, Object contract) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", success);
        response.put("message", message);
        response.put("contract", contract);
        return response;
    }
    
    private Object createExecutionResponse(boolean success, String message) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", success);
        response.put("message", message);
        return response;
    }
    
    private Object createTokenizationResponse(RWATokenizationResult result) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", result.isSuccess());
        response.put("message", result.getMessage());
        response.put("token", convertTokenToProto(result.getToken()));
        response.put("digitalTwin", convertDigitalTwinToProto(result.getDigitalTwin()));
        response.put("processingTime", result.getProcessingTime());
        return response;
    }
    
    private Object createTransferResponse(boolean success, String message) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", success);
        response.put("message", message);
        response.put("transactionHash", "0x" + UUID.randomUUID().toString().replace("-", ""));
        return response;
    }
    
    private Object createTokenResponse(RWAToken token) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", token != null);
        response.put("message", token != null ? "Token found" : "Token not found");
        if (token != null) {
            response.put("token", convertTokenToProto(token));
        }
        return response;
    }
    
    private Object createBurnResponse(boolean success) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", success);
        response.put("message", success ? "Token burned successfully" : "Failed to burn token");
        response.put("burnedAt", System.currentTimeMillis());
        return response;
    }
    
    private Object createDigitalTwinResponse(AssetDigitalTwin twin) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", true);
        response.put("message", "Digital twin created successfully");
        response.put("digitalTwin", convertDigitalTwinToProto(twin));
        return response;
    }
    
    private Object createUpdateResponse(boolean success) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", success);
        response.put("message", success ? "Update successful" : "Update failed");
        return response;
    }
    
    private Object createGetDigitalTwinResponse(AssetDigitalTwin twin) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", twin != null);
        response.put("message", twin != null ? "Digital twin found" : "Digital twin not found");
        if (twin != null) {
            response.put("digitalTwin", convertDigitalTwinToProto(twin));
        }
        return response;
    }
    
    private Object createValuationResponse(BigDecimal valuation) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", true);
        response.put("message", "Valuation calculated successfully");
        response.put("valuation", valuation.toString());
        response.put("currency", "USD");
        response.put("timestamp", System.currentTimeMillis());
        return response;
    }
    
    private Object createMarketDataResponse(MarketData marketData) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", true);
        response.put("message", "Market data retrieved successfully");
        response.put("marketData", convertMarketDataToProto(marketData));
        return response;
    }
    
    private Object createContractStatsResponse(Object stats) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", true);
        response.put("message", "Contract statistics retrieved");
        response.put("stats", stats);
        return response;
    }
    
    private Object createTokenizerStatsResponse(TokenizerStats stats) {
        Map<String, Object> response = new HashMap<>();
        response.put("success", true);
        response.put("message", "Tokenizer statistics retrieved");
        response.put("stats", convertTokenizerStatsToProto(stats));
        return response;
    }
    
    // Convert internal objects to protobuf-compatible format
    // These will be replaced with actual protobuf conversion once generated
    
    private Map<String, Object> convertTokenToProto(RWAToken token) {
        Map<String, Object> proto = new HashMap<>();
        proto.put("tokenId", token.getTokenId());
        proto.put("assetId", token.getAssetId());
        proto.put("assetType", token.getAssetType());
        proto.put("assetValue", token.getAssetValue().toString());
        proto.put("tokenSupply", token.getTokenSupply().toString());
        proto.put("ownerAddress", token.getOwnerAddress());
        proto.put("digitalTwinId", token.getDigitalTwinId());
        proto.put("status", token.getStatus().toString());
        proto.put("quantumSafe", token.isQuantumSafe());
        return proto;
    }
    
    private Map<String, Object> convertDigitalTwinToProto(AssetDigitalTwin twin) {
        Map<String, Object> proto = new HashMap<>();
        proto.put("twinId", twin.getTwinId());
        proto.put("assetId", twin.getAssetId());
        proto.put("assetType", twin.getAssetType());
        proto.put("metadata", twin.getMetadata());
        proto.put("status", twin.getStatus().toString());
        proto.put("location", twin.getLocation());
        proto.put("ownerAddress", twin.getOwnerAddress());
        return proto;
    }
    
    private Map<String, Object> convertMarketDataToProto(MarketData marketData) {
        Map<String, Object> proto = new HashMap<>();
        proto.put("assetId", marketData.getAssetId());
        proto.put("assetType", marketData.getAssetType());
        proto.put("price", marketData.getPrice().toString());
        proto.put("volume", marketData.getVolume().toString());
        proto.put("volatility", marketData.getVolatility().toString());
        proto.put("reliabilityScore", marketData.getReliabilityScore());
        return proto;
    }
    
    private Map<String, Object> convertTokenizerStatsToProto(TokenizerStats stats) {
        Map<String, Object> proto = new HashMap<>();
        proto.put("totalTokens", stats.getTotalTokens());
        proto.put("totalValue", stats.getTotalValue().toString());
        proto.put("typeDistribution", stats.getTypeDistribution());
        proto.put("digitalTwins", stats.getDigitalTwins());
        proto.put("totalTokensCreated", stats.getTotalTokensCreated());
        proto.put("totalValueTokenized", stats.getTotalValueTokenized());
        return proto;
    }
    
    // Helper to create tokenization request from protobuf
    private RWATokenizationRequest createTokenizationRequest() {
        RWATokenizationRequest request = new RWATokenizationRequest();
        request.setAssetId("sample-asset-123");
        request.setAssetType("CARBON_CREDIT");
        request.setOwnerAddress("0x1234567890abcdef");
        request.setFractionSize(new BigDecimal("1000"));
        request.setMetadata(Map.of(
            "tons", "100",
            "vintage", "2024",
            "quality", "PREMIUM",
            "region", "US"
        ));
        return request;
    }
}